# public_astrostandards_tools

./: LICENSE  README.md  pyproject.toml
docs/: egp.md  perturb_tle.md  udl_eo_fitter.md  udlob_to_b3.md  utils.md
docs/notebooks/: 01.Initialization_and_config.ipynb  02.Propagate_a_TLE.ipynb  03.Coordinate_transforms.ipynb  04.Sensor_looks_and_residuals.ipynb
src/public_astrostandards_tools/: EGP_sans_Batch.py  EOfitter-vector.ipynb  EOfitter.ipynb  __init__.py  astro_time.py  ccsds.py  coordinates.py  egp.py  ephem_fitter.py  observations.py  orbit_utils.py  perturb_tle.py  residuals.py  rotas.py  sensor.py  sgp4.py  test_helpers.py  tle_fitter.py  udl_eo_fitter.py  udleo_to_b3.py  utils.py
tests/: test_astro_time.py  test_coordinates.py  test_egp.py  test_ephem_fitter.py  test_github_update.py  test_perturb.py  test_residuals.py  test_residuals_udl_data.py  test_sensor.py  test_sgp4.py  test_space2space.py  test_udl_eo_to_b3.py  test_utils.py  tle_fitter_test.py
